fix: add z-index to on drawer

--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -81,6 +81,7 @@
         bottom: 0;
         transform: translateX(100%);
         transition: all 0.5s ease-in-out;
+        z-index: 1111;
     }
     
     .show-collapse-section {
